# autoware-mono

./: .gitignore  AGENTS.md  CLAUDE.md  setup-dev-env.sh
ansible/roles/cuda/tasks/: main.yaml
docs/: autoware_ecosystem_source_reading_goals_20260103.md  autoware_session_summary_20260107.md  vehicle_following_scenario_task.md
issues/: 2026-01-07_17-01-10-vehicle-following-bus-20kmh-3m.csv  2026-01-08_11-27-29-auto-follow-nearest-bus-50m.csv
plan/: 2026-01-07_16-57-46-vehicle-following-bus-20kmh-3m.md
src/launcher/autoware_launch/autoware_launch/config/planning/scenario_planning/lane_driving/motion_planning/motion_velocity_planner/: obstacle_cruise.bus_following_3m.param.yaml
src/launcher/autoware_launch/autoware_launch/launch/: autoware.launch.xml  planning_simulator.launch.xml
src/launcher/autoware_launch/autoware_launch/launch/components/: tier4_planning_component.launch.xml
src/universe/autoware_universe/planning/autoware_following_goal_publisher/: CMakeLists.txt  package.xml
src/universe/autoware_universe/planning/autoware_following_goal_publisher/include/autoware/following_goal_publisher/: following_goal_publisher_node.hpp  goal_generator.hpp  target_tracker.hpp  target_tracker_node.hpp
src/universe/autoware_universe/planning/autoware_following_goal_publisher/src/: following_goal_publisher_node.cpp  goal_generator.cpp  target_tracker.cpp  target_tracker_node.cpp
src/universe/autoware_universe/planning/autoware_following_goal_publisher/test/: test_goal_generator.cpp  test_target_tracker.cpp
